[gd_scene load_steps=2 format=2]

[ext_resource path="res://systems/Lobby/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0431373, 0.054902, 0.262745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.43
anchor_right = 0.5
anchor_bottom = 0.43
margin_left = -160.0
margin_top = -98.0
margin_right = 160.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="."]
margin_left = 544.0
margin_top = 384.0
margin_right = 640.0
margin_bottom = 416.0
text = "Leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 384.0
margin_right = 480.0
margin_bottom = 416.0
disabled = true
text = "Start"
[connection signal="pressed" from="LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
